--- a/week-4-class.ipynb
+++ b/week-4-class.ipynb
@@ -12,6 +12,120 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "out:  [5]\n"
+     ]
+    },
+    {
+     "ename": "AssertionError",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\imperial\\discrete-maths-classes\\week-4-class.ipynb Cell 2\u001b[0m line \u001b[0;36m4\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/imperial/discrete-maths-classes/week-4-class.ipynb#X11sZmlsZQ%3D%3D?line=32'>33</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m out\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/imperial/discrete-maths-classes/week-4-class.ipynb#X11sZmlsZQ%3D%3D?line=34'>35</a>\u001b[0m \u001b[39m# Loop Invariant:\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/imperial/discrete-maths-classes/week-4-class.ipynb#X11sZmlsZQ%3D%3D?line=35'>36</a>\u001b[0m \u001b[39m# (1) out is sorted\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/imperial/discrete-maths-classes/week-4-class.ipynb#X11sZmlsZQ%3D%3D?line=36'>37</a>\u001b[0m \u001b[39m# (2) out contains values smaller than both L and R\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/imperial/discrete-maths-classes/week-4-class.ipynb#X11sZmlsZQ%3D%3D?line=42'>43</a>\u001b[0m \u001b[39m# to implement (2)\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/imperial/discrete-maths-classes/week-4-class.ipynb#X11sZmlsZQ%3D%3D?line=43'>44</a>\u001b[0m \u001b[39m# given that (1) is true, we can just check max(out) <= min(L) and min(R)\u001b[39;00m\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/imperial/discrete-maths-classes/week-4-class.ipynb#X11sZmlsZQ%3D%3D?line=46'>47</a>\u001b[0m mergesort([\u001b[39m6\u001b[39;49m,\u001b[39m5\u001b[39;49m,\u001b[39m3\u001b[39;49m,\u001b[39m1\u001b[39;49m,\u001b[39m8\u001b[39;49m,\u001b[39m7\u001b[39;49m,\u001b[39m2\u001b[39;49m,\u001b[39m4\u001b[39;49m])\n",
+      "\u001b[1;32mc:\\Users\\imperial\\discrete-maths-classes\\week-4-class.ipynb Cell 2\u001b[0m line \u001b[0;36m6\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/imperial/discrete-maths-classes/week-4-class.ipynb#X11sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m X\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/imperial/discrete-maths-classes/week-4-class.ipynb#X11sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m mid \u001b[39m=\u001b[39m \u001b[39mlen\u001b[39m(X)\u001b[39m/\u001b[39m\u001b[39m/\u001b[39m\u001b[39m2\u001b[39m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/imperial/discrete-maths-classes/week-4-class.ipynb#X11sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m L \u001b[39m=\u001b[39m mergesort(X[:mid])\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/imperial/discrete-maths-classes/week-4-class.ipynb#X11sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m R \u001b[39m=\u001b[39m mergesort(X[mid:])\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/imperial/discrete-maths-classes/week-4-class.ipynb#X11sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m out \u001b[39m=\u001b[39m []\n",
+      "\u001b[1;32mc:\\Users\\imperial\\discrete-maths-classes\\week-4-class.ipynb Cell 2\u001b[0m line \u001b[0;36m6\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/imperial/discrete-maths-classes/week-4-class.ipynb#X11sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m X\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/imperial/discrete-maths-classes/week-4-class.ipynb#X11sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m mid \u001b[39m=\u001b[39m \u001b[39mlen\u001b[39m(X)\u001b[39m/\u001b[39m\u001b[39m/\u001b[39m\u001b[39m2\u001b[39m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/imperial/discrete-maths-classes/week-4-class.ipynb#X11sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m L \u001b[39m=\u001b[39m mergesort(X[:mid])\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/imperial/discrete-maths-classes/week-4-class.ipynb#X11sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m R \u001b[39m=\u001b[39m mergesort(X[mid:])\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/imperial/discrete-maths-classes/week-4-class.ipynb#X11sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m out \u001b[39m=\u001b[39m []\n",
+      "\u001b[1;32mc:\\Users\\imperial\\discrete-maths-classes\\week-4-class.ipynb Cell 2\u001b[0m line \u001b[0;36m3\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/imperial/discrete-maths-classes/week-4-class.ipynb#X11sZmlsZQ%3D%3D?line=27'>28</a>\u001b[0m             j \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/imperial/discrete-maths-classes/week-4-class.ipynb#X11sZmlsZQ%3D%3D?line=28'>29</a>\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39m'\u001b[39m\u001b[39mout: \u001b[39m\u001b[39m'\u001b[39m, out)\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/imperial/discrete-maths-classes/week-4-class.ipynb#X11sZmlsZQ%3D%3D?line=29'>30</a>\u001b[0m     \u001b[39massert\u001b[39;00m [out[a] \u001b[39m>\u001b[39m out[a\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m] \u001b[39mfor\u001b[39;00m a \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39m1\u001b[39m, \u001b[39mlen\u001b[39m(out))]  \u001b[39m# checking (1)\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/imperial/discrete-maths-classes/week-4-class.ipynb#X11sZmlsZQ%3D%3D?line=30'>31</a>\u001b[0m     \u001b[39massert\u001b[39;00m \u001b[39mmax\u001b[39m(out) \u001b[39m<\u001b[39m \u001b[39mmin\u001b[39m(L[i], R[j])\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/imperial/discrete-maths-classes/week-4-class.ipynb#X11sZmlsZQ%3D%3D?line=32'>33</a>\u001b[0m \u001b[39mreturn\u001b[39;00m out\n",
+      "\u001b[1;31mAssertionError\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "# Current mergesort code\n",
+    "def mergesort(X):\n",
+    "    if len(X) <= 1:\n",
+    "        return X\n",
+    "    mid = len(X)//2\n",
+    "    L = mergesort(X[:mid])\n",
+    "    R = mergesort(X[mid:])\n",
+    "    out = []\n",
+    "    i = j = 0\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    while i < len(L) or j < len(R):\n",
+    "        if i == len(L):\n",
+    "            out.append(R[j])\n",
+    "            j += 1\n",
+    "        elif j == len(R):\n",
+    "            out.append(L[i])\n",
+    "            i += 1\n",
+    "        else:\n",
+    "            l = L[i]\n",
+    "            r = R[j]\n",
+    "            if l < r:\n",
+    "                out.append(L[i])\n",
+    "                i += 1\n",
+    "            else:\n",
+    "                out.append(R[j])\n",
+    "                j += 1\n",
+    "        print('out: ', out)\n",
+    "        assert [out[a] > out[a-1] for a in range(1, len(out))]  # checking (1)\n",
+    "        assert max(out) < min(L[i], R[j])\n",
+    "        \n",
+    "    return out\n",
+    "\n",
+    "# Loop Invariant:\n",
+    "# (1) out is sorted\n",
+    "# (2) out contains values smaller than both L and R\n",
+    "\n",
+    "# to implement (1)\n",
+    "# a for loop that cycles through out, checking that each element is >= the previous element\n",
+    "#   assert out[i] > out[i-1] for i in range(1, len(out))\n",
+    "\n",
+    "# to implement (2)\n",
+    "# given that (1) is true, we can just check max(out) <= min(L) and min(R)\n",
+    "\n",
+    "\n",
+    "mergesort([6,5,3,1,8,7,2,4])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "15"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# write some code to sum the values in an array, find the loop invariant and use it to prove correct summation\n",
+    "\n",
+    "# Loop Invariant:\n",
+    "# Initialization - must be true before first iteration of loop\n",
+    "# Maintenance - must be true throughout all iterations of loop\n",
+    "# Termination - must be true when exiting the loop\n",
+    "\n",
+    "# The loop invariant for this sum function might be that the `sum` variable is sum of the elements processed so far\n",
+    "# to implement loop invariant:\n",
+    "# check that sum is comprised of summation of values up to that point by having an additional array to trace and follow\n",
+    "\n",
+    "def sum_array(arr):\n",
+    "    sum = 0\n",
+    "    for i in range(len(arr)):\n",
+    "        sum = sum + arr[i]\n",
+    "    return sum\n",
+    "\n",
+    "sum_array([1,2,3,4,5])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "1e44e3b2",
    "metadata": {},
@@ -61,8 +175,8 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "Input \u001b[1;32mIn [2]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mexactly_half_of\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m3\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "Input \u001b[1;32mIn [1]\u001b[0m, in \u001b[0;36mexactly_half_of\u001b[1;34m(x)\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mexactly_half_of\u001b[39m(x):\n\u001b[1;32m----> 2\u001b[0m     \u001b[38;5;28;01massert\u001b[39;00m x\u001b[38;5;241m%\u001b[39m\u001b[38;5;241m2\u001b[39m\u001b[38;5;241m==\u001b[39m\u001b[38;5;241m0\u001b[39m \u001b[38;5;66;03m# can only return exactly half if it's divisible by 2\u001b[39;00m\n\u001b[0;32m      3\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m x\u001b[38;5;241m/\u001b[39m\u001b[38;5;241m/\u001b[39m\u001b[38;5;241m2\u001b[39m\n",
+      "\u001b[1;32mc:\\Users\\imperial\\discrete-maths-classes\\week-4-class.ipynb Cell 4\u001b[0m line \u001b[0;36m1\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/imperial/discrete-maths-classes/week-4-class.ipynb#W3sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m exactly_half_of(\u001b[39m3\u001b[39;49m) \u001b[39m# raises an AssertionError because 3 is not divisible by 2\u001b[39;00m\n",
+      "\u001b[1;32mc:\\Users\\imperial\\discrete-maths-classes\\week-4-class.ipynb Cell 4\u001b[0m line \u001b[0;36m2\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/imperial/discrete-maths-classes/week-4-class.ipynb#W3sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mexactly_half_of\u001b[39m(x):\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/imperial/discrete-maths-classes/week-4-class.ipynb#W3sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m     \u001b[39massert\u001b[39;00m x\u001b[39m%\u001b[39m\u001b[39m2\u001b[39m\u001b[39m==\u001b[39m\u001b[39m0\u001b[39m \u001b[39m# can only return exactly half if it's divisible by 2\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/imperial/discrete-maths-classes/week-4-class.ipynb#W3sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m x\u001b[39m/\u001b[39m\u001b[39m/\u001b[39m\u001b[39m2\u001b[39m\n",
       "\u001b[1;31mAssertionError\u001b[0m: "
      ]
     }
@@ -128,9 +242,9 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "Input \u001b[1;32mIn [4]\u001b[0m, in \u001b[0;36m<cell line: 12>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      9\u001b[0m     right_sum \u001b[38;5;241m=\u001b[39m \u001b[38;5;28msum\u001b[39m(X[half_n:\u001b[38;5;241m2\u001b[39m\u001b[38;5;241m*\u001b[39mhalf_n])\n\u001b[0;32m     10\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m left_sum\u001b[38;5;241m+\u001b[39mright_sum\n\u001b[1;32m---> 12\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mcrazy_sum\u001b[49m\u001b[43m(\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m3\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m)\n",
-      "Input \u001b[1;32mIn [4]\u001b[0m, in \u001b[0;36mcrazy_sum\u001b[1;34m(X)\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mcrazy_sum\u001b[39m(X):\n\u001b[0;32m      6\u001b[0m     n \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlen\u001b[39m(X)\n\u001b[1;32m----> 7\u001b[0m     half_n \u001b[38;5;241m=\u001b[39m \u001b[43mhalf_of\u001b[49m\u001b[43m(\u001b[49m\u001b[43mn\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      8\u001b[0m     left_sum \u001b[38;5;241m=\u001b[39m \u001b[38;5;28msum\u001b[39m(X[\u001b[38;5;241m0\u001b[39m:half_n])\n\u001b[0;32m      9\u001b[0m     right_sum \u001b[38;5;241m=\u001b[39m \u001b[38;5;28msum\u001b[39m(X[half_n:\u001b[38;5;241m2\u001b[39m\u001b[38;5;241m*\u001b[39mhalf_n])\n",
-      "Input \u001b[1;32mIn [4]\u001b[0m, in \u001b[0;36mhalf_of\u001b[1;34m(n)\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mhalf_of\u001b[39m(n):\n\u001b[1;32m----> 2\u001b[0m     \u001b[38;5;28;01massert\u001b[39;00m n\u001b[38;5;241m%\u001b[39m\u001b[38;5;241m2\u001b[39m\u001b[38;5;241m==\u001b[39m\u001b[38;5;241m0\u001b[39m\n\u001b[0;32m      3\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m n\u001b[38;5;241m/\u001b[39m\u001b[38;5;241m/\u001b[39m\u001b[38;5;241m2\u001b[39m\n",
+      "\u001b[1;32mc:\\Users\\imperial\\discrete-maths-classes\\week-4-class.ipynb Cell 8\u001b[0m line \u001b[0;36m1\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/imperial/discrete-maths-classes/week-4-class.ipynb#X10sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m     right_sum \u001b[39m=\u001b[39m \u001b[39msum\u001b[39m(X[half_n:\u001b[39m2\u001b[39m\u001b[39m*\u001b[39mhalf_n])\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/imperial/discrete-maths-classes/week-4-class.ipynb#X10sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m left_sum\u001b[39m+\u001b[39mright_sum\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/imperial/discrete-maths-classes/week-4-class.ipynb#X10sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m \u001b[39mprint\u001b[39m(crazy_sum([\u001b[39m1\u001b[39;49m,\u001b[39m2\u001b[39;49m,\u001b[39m3\u001b[39;49m]))\n",
+      "\u001b[1;32mc:\\Users\\imperial\\discrete-maths-classes\\week-4-class.ipynb Cell 8\u001b[0m line \u001b[0;36m7\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/imperial/discrete-maths-classes/week-4-class.ipynb#X10sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mcrazy_sum\u001b[39m(X):\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/imperial/discrete-maths-classes/week-4-class.ipynb#X10sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m     n \u001b[39m=\u001b[39m \u001b[39mlen\u001b[39m(X)\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/imperial/discrete-maths-classes/week-4-class.ipynb#X10sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m     half_n \u001b[39m=\u001b[39m half_of(n)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/imperial/discrete-maths-classes/week-4-class.ipynb#X10sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m     left_sum \u001b[39m=\u001b[39m \u001b[39msum\u001b[39m(X[\u001b[39m0\u001b[39m:half_n])\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/imperial/discrete-maths-classes/week-4-class.ipynb#X10sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m     right_sum \u001b[39m=\u001b[39m \u001b[39msum\u001b[39m(X[half_n:\u001b[39m2\u001b[39m\u001b[39m*\u001b[39mhalf_n])\n",
+      "\u001b[1;32mc:\\Users\\imperial\\discrete-maths-classes\\week-4-class.ipynb Cell 8\u001b[0m line \u001b[0;36m2\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/imperial/discrete-maths-classes/week-4-class.ipynb#X10sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mhalf_of\u001b[39m(n):\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/imperial/discrete-maths-classes/week-4-class.ipynb#X10sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m     \u001b[39massert\u001b[39;00m n\u001b[39m%\u001b[39m\u001b[39m2\u001b[39m\u001b[39m==\u001b[39m\u001b[39m0\u001b[39m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/imperial/discrete-maths-classes/week-4-class.ipynb#X10sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m n\u001b[39m/\u001b[39m\u001b[39m/\u001b[39m\u001b[39m2\u001b[39m\n",
       "\u001b[1;31mAssertionError\u001b[0m: "
      ]
     }
@@ -167,7 +281,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
