--- a/week-5-class.ipynb
+++ b/week-5-class.ipynb
@@ -18,6 +18,365 @@
     "\n",
     "You could also try writing code for parts (a) and (c), optionally."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Rod Cutting Problem"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Best Price"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A factory produces rods of length 8m. The rods can be cut into any integer length to be sold according to the table:\n",
+    "|Length $i$|1|2|3|4|5|6|7|8|\n",
+    "|----------|-|-|-|-|-|-|-|-|\n",
+    "|Price $P_i$|1|5|8|9|10|17|17|20|\n",
+    "\n",
+    "How can the factory maximise the profit made by selling the rods?\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The best price is: 22\n"
+     ]
+    }
+   ],
+   "source": [
+    "def rod_cut(n,p, memo=None):\n",
+    "    if memo is None:                                    # default values                                    \n",
+    "        memo = {0:0, 1:p[1]}                            # if rod is 0m then cant sell\n",
+    "                                                        # if rod is 1m then you can only sell\n",
+    "\n",
+    "    if n not in memo:                                   # for any rod that can be cut...\n",
+    "        bestprice = 0                                   # initialize best price to be 0\n",
+    "        for i in range(1, n+1):                         # iterate through the different cuts\n",
+    "            curprice = p[i] + rod_cut(n-i, p, memo)     # take note of the price  \n",
+    "            if curprice > bestprice:                    \n",
+    "                bestprice = curprice                    # assign a new best price\n",
+    "            memo[n] = bestprice                         # store the best price for that length in the hash table\n",
+    "    return memo[n]                                      # return the best price for the given\n",
+    "\n",
+    "p = [0, 1, 5, 8, 9, 10, 17, 17, 20]\n",
+    "print('The best price is:', rod_cut(8, p))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Which Cuts (Top Down)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The algorithm finds the maximum price of the rod based on a given length. But it does not specify which cuts to make. In order to improve the algorithm to output what cuts to make, we can tweak the algorithm to also memoise the list of cuts. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Price and where to cut: (22, [2, 6])\n"
+     ]
+    }
+   ],
+   "source": [
+    "def rod_cut(n,p, memo=None):\n",
+    "    if memo is None:                                # default values\n",
+    "        #           price   cuts                    \n",
+    "        memo = {0: (0,      []),                    # if rod is 0m, cant sell and 0 cuts\n",
+    "                1: (p[1],   [1])}                   # if rod is 1m, sell for p[1], cut at length 1\n",
+    "        \n",
+    "    if n not in memo:                               # for any rod that can be cut...\n",
+    "        bestprice = 0                               # initialize best price to be 0\n",
+    "        bestcuts = None                             # initialize best cuts to be None               \n",
+    "        for i in range(1, n+1):                     # iterate through the different cuts            for a rod of length n\n",
+    "            price, cuts = rod_cut(n-i, p, memo)     # take note of the price and cuts               find the price and cuts of n-i\n",
+    "            price += p[i]                           # add the price of the current cut              add that to the price of i\n",
+    "            if price >bestprice:                \n",
+    "                bestprice = price                   # assign a new best price\n",
+    "                bestcuts = [i] + cuts               # assign a new best cuts\n",
+    "        memo[n] = (bestprice, bestcuts)             # store the best price and cuts for that length in the hash table\n",
+    "    return memo[n]                                  # return the best price and cuts for the given\n",
+    "\n",
+    "p = [0, 1, 5, 8, 9, 10, 17, 17, 20]\n",
+    "print('Price and where to cut:', rod_cut(8, p))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**BUT** this method is not memory efficient. Suppose that the price of a 1m cut is the highest. \n",
+    "\n",
+    "Then for a rod of length $n$, the list of cuts will be [1,1,1,...,1]. This will take $O(n)$ memory complexity since we need to store each cut individually. \n",
+    "\n",
+    "Following this, we then need to store the solution for all rod lengths, giving:$$f(1) + f(2) + f(3) + ... + f(n) = O(n^2)$$\n",
+    "\n",
+    "The **main problem** is that we are storing the same information repeatedly. Consider the following:\n",
+    "\n",
+    "e.g. If ```bestcuts[12] = [2,3,7]```, then we know that:\n",
+    "- bestcuts[10] = [3,7]\n",
+    "- bestcuts[9] = [2,7]\n",
+    "- bestcuts[5] = [2,3]\n",
+    "- bestcuts[7] = [7], bestcuts[3] = 3 and bestcuts[2] = 2\n",
+    "\n",
+    "**NOTE:** Throughout, $2$, $3$, $7$ appear 4 times, meaning we are storing their values 3 times more than neccessary.\n",
+    "\n",
+    "**Solution**\n",
+    "\n",
+    "In order stop storing uneccessary values, we can just store one of the cuts and reconstruct the solution at the end. \n",
+    "\n",
+    "Suppose we store only the first cut of each rod:\n",
+    "|rod length|cuts|first cut|reconstruction|\n",
+    "|--|-----|-|-|\n",
+    "|12|2, 3, 7|2|$12 - 2 = 10$|\n",
+    "|10|3, 7  |3|$10 - 3 = 7$|\n",
+    "|7 |2    |7|$7 - 7 = 0$|\n",
+    "\n",
+    "In this manner, we only store each of the cuts once, giving a memory complexity of $O(n)$. However, note that there also is a reconstruction cost, to add all the neccessary steps back together. Fortunately, this cost is at **most** n additions, and therefore also has memory complexity $O(n)$. Since $O(n) + O(n) = O(2n) = O(n)$, the memory complexity remains the same at $O(n)$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Price and where to cut: (22, [2, 6])\n"
+     ]
+    }
+   ],
+   "source": [
+    "def rod_cut_table(n, p, memo):\n",
+    "    if n not in memo:                                   # for any rod that can be cut...\n",
+    "        bestprice = 0                                   # initialize best price to be 0\n",
+    "        for i in range(1, n+1):                         # iterate through the different cuts\n",
+    "            price, cut = rod_cut_table(n-i, p, memo)    # take note of the price\n",
+    "            price += p[i]                               # add the price of the current cut\n",
+    "            if price > bestprice:\n",
+    "                bestprice = price                       # assign a new best price\n",
+    "                bestcut = i                             # assign a best next cut to make\n",
+    "        memo[n] = (bestprice, bestcut)                  # store the best price and cut for that length in the hash table\n",
+    "    return memo[n]\n",
+    "\n",
+    "def rod_cut(n, p):\n",
+    "    #           price   cuts\n",
+    "    memo = {0:  (0,     0),                             # if rod is 0m, cant sell and 0 cuts\n",
+    "            1:  (p[1],  1)}                             # if rod is 1m, sell for p[1], cut at length 1\n",
+    "    \n",
+    "    bestprice, bestcut = rod_cut_table(n, p, memo)      # find the best price and cut for a rod of length n\n",
+    "    best_cuts = []                                      # initialize best cuts to be an empty list\n",
+    "    while n:                                            # reconstruction algorithm:\n",
+    "        price, nextcut = memo[n]                        # find the next cut \n",
+    "        best_cuts.append(nextcut)                       # add it to the list of best cuts\n",
+    "        n -= nextcut                                    # cut has been made -> remove the length from the rod\n",
+    "    return bestprice, best_cuts                         # return the best price and cuts taken\n",
+    "\n",
+    "p = [0, 1, 5, 8, 9, 10, 17, 17, 20]\n",
+    "print('Price and where to cut:', rod_cut(8, p))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Bottom Up Solution"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Knowns:**\n",
+    "\n",
+    "- Arguments are integers\n",
+    "- The solution for all integers are calculated\n",
+    "- Best solution for $i$ depends on best solution for $j<i$\n",
+    "- Start at i = 1, work upwards\n",
+    "\n",
+    "$$v_n = \\text{max}_{i=0}^n(p_i + v_{n-i})$$\n",
+    "\n",
+    "This mathematical expression describes that the current value, $v_n$ is dependent on all of the previous values of $v_k$ for $k \\le n-1$. \n",
+    "\n",
+    "From this we can infer that the best solution for $i$ depends on the best solution for $j < i$ and hence we can take a bottom up approach evaluating from $i=1$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Price and where to cut: (22, [2, 6])\n"
+     ]
+    }
+   ],
+   "source": [
+    "def rod_cut(n, p):\n",
+    "    bestprices = [0, p[1]] + [0]*(n-1)                      # initialize best prices: 0 for 0m, p[1] for 1m and 0 for rest\n",
+    "    nextcuts = [0, 1] + [0]*(n-1)                           # initialize next cuts: 0 for 0m, 1 for 1m and 0 for rest\n",
+    "    for i in range(2, n+1):                                 # for a the remaining length of rod\n",
+    "        for nextcut in range(1, i+1):                       # cycle through the different possible cuts\n",
+    "            price = bestprices[i-nextcut] + p[nextcut]      # the price is given by the bestprice of the previous cut + the price of the current cut\n",
+    "            if price > bestprices[i]:                       # if the price is better than the current best price\n",
+    "                bestprices[i] = price                       # assign a new best price\n",
+    "                nextcuts[i] = nextcut                       # assign a new best next cut\n",
+    "    \n",
+    "    # reconstruction\n",
+    "    bestcuts = []\n",
+    "    bestprice = bestprices[n]\n",
+    "    while n:\n",
+    "        bestcuts.append(nextcuts[n])\n",
+    "        n -= nextcuts[n]\n",
+    "    return bestprice, bestcuts\n",
+    "\n",
+    "p = [0, 1, 5, 8, 9, 10, 17, 17, 20]\n",
+    "print('Price and where to cut:', rod_cut(8, p))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Longest Common Subword"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Example (2014 Exam, Q3)**\n",
+    "\n",
+    "Finding the longest common subword (LCS). e.g.\n",
+    "- aabaababaa and ababaaabb\n",
+    "- ababaaa: from a**aba**a**ba**b**aa** and **ababaaa**bb\n",
+    "\n",
+    "General Problem:\n",
+    "- $A = a_1a_2...a_n$\n",
+    "- $B = b_1b_2...b_m$\n",
+    "\n",
+    "**Brute Force Solution?**\n",
+    "\n",
+    "- Number of subwords of A is $2^n$\n",
+    "    - There are n letters in A, each could either be included or not included giving complexity $O(n)$\n",
+    "- Check if a word is a subword of B will take $O(m)$\n",
+    "- Hence overall the time complexity is $O(2^nm)$ **[Non-Examinable]**\n",
+    "\n",
+    "**Dynamic Programming**\n",
+    "$A_i = a_1a_2...a_i$ and $B_i = b_1b_2...b_j$\n",
+    "length of LCS between $A_i$ and $B_j$ is $p(i, j)$\n",
+    "\n",
+    "Formula for $p(i, j)$:\n",
+    "- If $a_i \\ne b_j$ then LCS of $A_i$ and $B_j$ must be:\n",
+    "    - LCS of $A_{i-1}$ and $B_j$ **OR**\n",
+    "    - LCS of $A_{i}$ and $B_{j-1}$\n",
+    "    - So $p(i, j) = \\max\\left[p(i-1, j), p(i, j-1)\\right]$\n",
+    "- If $a_i = b_j$, then LCS of $A_i$ and $B_j$ must be:\n",
+    "    - LCS of $A_{i-1}$ and $B_{j-1}$ with $a_i = b_j$ appended\n",
+    "    - So $p(i, j) = p(i-1, j-1) + 1$\n",
+    "\n",
+    "Therefore, we can define the general formula:\n",
+    "$$\n",
+    "p(i, j) = \\begin{cases}\n",
+    "             0                                      & \\text{if } i = 0 \\text{ or } j = 0 \\\\\n",
+    "             \\max\\left[p(i-1, j), p(i, j-1)\\right]  & a_i \\ne b_j \\\\\n",
+    "             p(i-1, j-1) + 1                        & a_i = b_j\n",
+    "        \\end{cases}\n",
+    "$$\n",
+    "\n",
+    "**Algorithm Pseudocode**\n",
+    "\n",
+    "```memo = {}\n",
+    "def LCS(i, j):\n",
+    "    if i = 0 or j = 0 return 0\n",
+    "    if (i, j) not in memo:\n",
+    "        if A[i] != B[j]:\n",
+    "            memo[i, j] = max(LCS(i - 1, j), LCS(i, j - 1))\n",
+    "        else:\n",
+    "            memo[i, j] = 1 + LCS(i - 1, j - 1)\n",
+    "    return memo[i,j]\n",
+    "```\n",
+    "\n",
+    "**Note:** This pseudocode only calculates the length, it does not output the actual values\n",
+    "\n",
+    "The time complexity of this function is:\n",
+    "- Each function call is $O(1)$\n",
+    "- Computation of each $p(i, j)$ occurs at most once\n",
+    "- Hence the complexity is now $O(nm)$\n",
+    "\n",
+    "**Example:** Compute LCS of adcaba and abcbdab\n",
+    "\n",
+    "A simple way to think about this question is to define a 2-D array with indices, $i$ and $j$, corresponding to letters on each word.\n",
+    "\n",
+    "| |$i$|0|1|2|3|4|5|6|\n",
+    "|-|-|-|-|-|-|-|-|-|\n",
+    "|$j$| |$\\cdot$|B|D|C|A|B|A|\n",
+    "|0|$\\cdot$| | | | | | | |\n",
+    "|1|A| | | | |*| |*| \n",
+    "|2|B| |*| | | |*| | \n",
+    "|3|C| | | |*| | | | \n",
+    "|4|B| |*| | | |*| | \n",
+    "|5|D| | |*| | | | | \n",
+    "|6|A| | | | |*| | |\n",
+    "|7|B| |*| | | |*| | \n",
+    "\n",
+    "Recalling the general formula we had just defined, we can traverse the array and input values based on the conditions of $i$ and $j$.\n",
+    "\n",
+    "**NOTE** \n",
+    "\n",
+    "The cells denoted by the asterisk are cells in which $i = j$ . These are special in that in order to calculate them, we should take the value to the upper diagonal of the cell and add 1. \n",
+    "\n",
+    "Similarly, for all cells in which $i \\ne j$, we should compare the cells above and to the left of the current cell and take the maximum. \n",
+    "\n",
+    "Then we can traverse the array and fill in the values, giving:\n",
+    "\n",
+    "| |$i$|0|1|2|3|4|5|6|\n",
+    "|-|-|-|-|-|-|-|-|-|\n",
+    "|$j$| |$\\cdot$|B|D|C|A|B|A|\n",
+    "|0|$\\cdot$|0|0|0|0|0|0|0|\n",
+    "|1|A|0|0|0|0|*1*|1|*1*| \n",
+    "|2|B|0|*1*|1|1|1|*2*|2| \n",
+    "|3|C|0|1|1|*2*|2|2|2| \n",
+    "|4|B|0|*1*|1|1|2|*3*|3| \n",
+    "|5|D|0|1|*2*|2|2|3|3| \n",
+    "|6|A|0|1|2|2|*3*|3|3|\n",
+    "|7|B|0|*1*|2|2|3|*4*|**4**| \n",
+    "\n",
+    "Ending with the final value at $i = 6$ and $j = 7$, the value in the last cell is 4, telling us that the length of the LCS is 4. Next we can retrace the steps, taking note of the cells that were denoted by the asterisks. \n",
+    "\n",
+    "The asterisks denoted that the characters were shared across both words. Hence, we can spell out the LCS word by retracing and combining only the characters in asterisked cells. "
+   ]
   }
  ],
  "metadata": {
@@ -36,7 +395,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
