--- a/answers/week-2-class-answers.ipynb
+++ b/answers/week-2-class-answers.ipynb
@@ -5,7 +5,7 @@
    "id": "b255223f",
    "metadata": {},
    "source": [
-    "# Week 2 class\n",
+    "# Week 2 class (with answers)\n",
     "\n",
     "This week is a coding challenge. The task is to write code to convert between two \"sparse matrix\" formats.\n",
     "\n",
@@ -44,41 +44,6 @@
    "metadata": {},
    "source": [
     "Write your code, and check that it gives the correct solution for the following input (assuming 4x4 matrix):"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ff4220d8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# for u, v:\n",
-    "u = [0, 1, 2, 3, 0, 1, 2, 3, 2, 1]\n",
-    "v = [1, 3, 0, 1, 2, 1, 2, 2, 1, 2]\n",
-    "\n",
-    "# convert M\n",
-    "M = [[0, 1, 1, 0],\n",
-    "    [0, 1, 1, 1],\n",
-    "    [1, 1, 1, 0],\n",
-    "    [0, 1, 1, 0]]\n",
-    "\n",
-    "# to N\n",
-    "N = [[1, 2],\n",
-    "     [1, 2, 3],\n",
-    "     [0, 1, 2],\n",
-    "     [1, 2]]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "393c8928",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def csrmatrix(u, v):\n",
-    "    "
    ]
   },
   {
@@ -144,6 +109,112 @@
     "    vector< vector<int> > row;\n",
     "    // fill in your solution here\n",
     "\n",
+    "\n",
+    "    // check solution\n",
+    "    vector<int> row0 { 1, 2 };\n",
+    "    vector<int> row1 { 3, 1, 2 };\n",
+    "    vector<int> row2 { 0, 2, 1 };\n",
+    "    vector<int> row3 { 1, 2 };\n",
+    "    vector< vector<int> > soln { row0, row1, row2, row3 };\n",
+    "    bool all_good = true;\n",
+    "    if(row.size()!=soln.size())\n",
+    "    {\n",
+    "        all_good = false;\n",
+    "    } else \n",
+    "    {\n",
+    "        for(int i=0; i<4; i++)\n",
+    "        {\n",
+    "            if(row[i].size()!=soln[i].size())\n",
+    "            {\n",
+    "                all_good = false;\n",
+    "                break;\n",
+    "            }\n",
+    "            for(int j=0; j<row[i].size(); j++)\n",
+    "            {\n",
+    "                if(row[i][j]!=soln[i][j])\n",
+    "                {\n",
+    "                    all_good = false;\n",
+    "                    break;\n",
+    "                }\n",
+    "            }\n",
+    "            if(!all_good) break;\n",
+    "        }\n",
+    "    }\n",
+    "    if(all_good)\n",
+    "    {\n",
+    "        cout << \"Working solution!\" << endl;\n",
+    "    } else\n",
+    "    {\n",
+    "        cout << \"Not right.\" << endl;\n",
+    "    }\n",
+    "\treturn 0;\n",
+    "}\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a181ee65",
+   "metadata": {},
+   "source": [
+    "## Answer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "76611e2c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1, 2], [3, 1, 2], [0, 2, 1], [1, 2]]\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "def convert_coo_to_csr(u, v, n):\n",
+    "    row = [[] for _ in range(n)] # n empty lists\n",
+    "    for i in range(len(u)):\n",
+    "        row[u[i]].append(v[i])\n",
+    "    return row\n",
+    "\n",
+    "solution = convert_coo_to_csr(u, v, 4)\n",
+    "print(solution)\n",
+    "print(solution_is_correct(solution))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e5819215",
+   "metadata": {},
+   "source": [
+    "## C++ solution\n",
+    "\n",
+    "Here's a C++ solution:\n",
+    "\n",
+    "```C++\n",
+    "#include<iostream>\n",
+    "#include<vector>\n",
+    "\n",
+    "using namespace std;\n",
+    "\n",
+    "int main()\n",
+    "{\n",
+    "    vector<int> u{ 0, 1, 2, 3, 0, 1, 2, 3, 2, 1 };\n",
+    "    vector<int> v{ 1, 3, 0, 1, 2, 1, 2, 2, 1, 2 };\n",
+    "    vector< vector<int> > row;\n",
+    "    // fill in your solution here\n",
+    "\n",
+    "    for(int i=0; i<u.size(); i++)\n",
+    "    {\n",
+    "        if(row.size()<=u[i])\n",
+    "            row.resize(u[i]+1);\n",
+    "        row[u[i]].push_back(v[i]);\n",
+    "    }\n",
     "\n",
     "    // check solution\n",
     "    vector<int> row0 { 1, 2 };\n",
