--- a/week-3-class.ipynb
+++ b/week-3-class.ipynb
@@ -51,10 +51,63 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e185b027",
+   "metadata": {},
+   "source": [
+    "**Answers**\n",
+    "\n",
+    "(a) Step by step:\n",
+    "```Python\n",
+    "def majority(A):                #function definition\n",
+    "    n = len(A)                  #storing the length of the array in `n`\n",
+    "    for i in range(n):          #for loop to iterature through the array\n",
+    "        c = 0                   #count the occurences of the value at A[i]\n",
+    "        for j in range(n):      #second forloop to iterature through the array for comparison\n",
+    "            if A[i]==A[j]:      #if the value at A[j] is the same at A[i]\n",
+    "                c = c+1         #add one to the counter for occurences\n",
+    "        if c>n/2:               #if count is greater than len/2\n",
+    "            return A[i]         #a majority has been found\n",
+    "    return None                 #else no majority in the array\n",
+    "```\n",
+    "(b) Divide and Conquer:\n",
+    "\n",
+    "split into subarrays\n",
+    "check the value in each subarray by comparing to the full array values"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "3b30d9b8",
    "metadata": {},
    "source": [
     "## Python template"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "a101ce3b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def majority(x):\n",
+    "    # base case\n",
+    "    if len(x) == 1:\n",
+    "        return 0\n",
+    "    \n",
+    "    n = len(x)\n",
+    "    mid = n//2\n",
+    "\n",
+    "    L = majority(x[:mid])\n",
+    "    R = majority(x[mid+1:])\n",
+    "    \n",
+    "    if sum(y == x[L] for y in x) > n/2:\n",
+    "        return \n",
+    "    if sum(y == x[R] for y in x) > n/2:\n",
+    "        return \n",
+    "    \n",
+    "    \n",
+    "    return -1"
    ]
   },
   {
@@ -94,6 +147,86 @@
     "    print(\"Wrong! (4)\")\n",
     "else:\n",
     "    print(\"You got it!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "38b6f152",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def search(X, val):\n",
+    "    if len(X) == 1:\n",
+    "        if X[0] == val:\n",
+    "            return 0\n",
+    "        else:\n",
+    "            return -1\n",
+    "    \n",
+    "    else:\n",
+    "        mid = len(X)//2\n",
+    "        if val == X[mid]:\n",
+    "            return mid\n",
+    "        \n",
+    "        elif val > X[mid]:\n",
+    "            s = search(X[mid+1:], val)\n",
+    "            return s + mid\n",
+    "        \n",
+    "        else:\n",
+    "            return search(X[:mid], val)\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d6bfeeb5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def searchans(A, x):\n",
+    "    # Establish base cases\n",
+    "    if len(A) == 0:\n",
+    "        return -1\n",
+    "    if len(A) == 1:\n",
+    "        if A[0] == x:\n",
+    "            return 0\n",
+    "        return -1\n",
+    "    \n",
+    "    # finding midpoint\n",
+    "    m = len(A)//2\n",
+    "    if A[m] == x:\n",
+    "        return m\n",
+    "    elif A[m] > x:          # left half\n",
+    "        return searchans(A[:m], x)\n",
+    "    else:                   # right half\n",
+    "        s = searchans(A[m+1:], x)\n",
+    "        if s == -1:\n",
+    "            return -1\n",
+    "        else:\n",
+    "            return m + 1 + s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "57d99b7b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Y = [0, 11, 12, 13, 14, 15, 16, 17, 18]\n",
+    "search(Y, 15)"
    ]
   },
   {
@@ -153,7 +286,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.7.16"
   }
  },
  "nbformat": 4,
